Update FishManager methods to reflect changes